aws/cloudformation.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Template for deploying the Endeavor Matcher project on an EC2 instance running Amazon Linux 2023.

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair
    Type: AWS::EC2::KeyPair::KeyName  # <-- correct parameter type
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t4g.micro
    AllowedValues:
      - t4g.micro
      - t4g.small
      - t4g.medium

Resources:
  AdvancedEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName              # <-- references the parameter
      ImageId: ami-0494a972fde2019fb
      SecurityGroups:
        - !Ref AdvancedSecurityGroup     # <-- references the resource named below
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          set -e
          ...

  AdvancedSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound HTTP (80), backend (5000), and SSH (22)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  InstancePublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt AdvancedEC2Instance.PublicIp  # <-- must match resource name
